@@ -46,7 +46,7 @@ public class TestDenseVector extends TestCase {
         HCluster hCluster = new HCluster();
         hCluster.setUp();
 
-        m1 = new DenseMatrix(hCluster.conf, "vectorTest");
+        m1 = new DenseMatrix(hCluster.getConf(), "vectorTest");
 
         for (int i = 0; i < 2; i++)
           for (int j = 0; j < 4; j++)
